PP-11205 Add endpoint to expunge and archive historical data
- Added endpoint to expunge and archive historical data
